Do not show commas if no tags, updated copy form with currency

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -62,6 +62,8 @@
         }
       });
       
+      $('#book_title').focus();
+      
       $('#subjects')
         // don't navigate away from the field on tab when selecting an item
         .bind( "keydown", function( event ) {
