Rake task to seed all old books, pagination for books

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -61,7 +61,7 @@
         <%= copy.page_count %>
       </p>
       <p>
-        <b><%= copy.cover %></b>
+        <b><%= copy.cover.capitalize %></b>
       </p>
 
       <p>
