Added striped table to books#index

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,7 @@
 
 <p><%= paginate @books %></p>
 
-<table class="table">
+<table class="table table-striped">
   <tr>
     <th>Title</th>
     <th>Subtitle</th>
