Display page_count as unpaginated if number of pages is 0

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -58,7 +58,7 @@
       </p>
       <p>
         <b>Pages:</b>
-        <%= copy.page_count %>
+        <%= copy.formatted_page_count %>
       </p>
       <p>
         <b><%= copy.cover.capitalize %></b>
