--- a/app/views/copies/index.html.erb
+++ b/app/views/copies/index.html.erb
@@ -21,7 +21,7 @@
     <td><%= copy.book_id %></td>
     <td><%= copy.publisher %></td>
     <td><%= copy.place %></td>
-    <td><%= copy.page_count %></td>
+    <td><%= copy.formatted_page_count %></td>
     <td><%= copy.cover %></td>
     <td><%= copy.price %></td>
     <td><%= copy.more_information %></td>
