--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,7 +11,7 @@
     <th>Illustrator</th>
     <th>Series</th>
     <th>Book type</th>
-    <th>More information</th>
+    <th>Subjects</th>
     <th></th>
     <th></th>
     <th></th>
@@ -26,7 +26,7 @@
     <td><%= book.illustrator %></td>
     <td><%= book.series %></td>
     <td><%= book.book_type %></td>
-    <td><%= book.more_information %></td>
+    <td><%= book.subjects_list %></td>
     <td><%= link_to 'Show', book %></td>
     <td><%= link_to 'Edit', edit_book_path(book) %></td>
     <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
