--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -26,7 +26,7 @@
     <td><%= book.illustrator %></td>
     <td><%= book.series %></td>
     <td><%= book.book_type %></td>
-    <td><%= book.subjects_list %></td>
+    <td><%= print_list(book.subjects) %></td>
     <td><%= link_to 'Show', book %></td>
     <td><%= link_to 'Edit', edit_book_path(book) %></td>
     <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
