--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,14 @@
-<h1>Welcome to LibraryCat!</h1>
+<div class="row">
+  <div class="span12">
+    <h1>Welcome to LibraryCat!</h1>
+  </div>
+  <div class="span12">
+    <div class="search_container">
+      <form class="form-search">
+        <i class="icon-search"></i>
+        <input type="text" class="input-medium search-query span8">
+        <button type="submit" class="btn">Search</button>
+      </form>
+    </div>
+  </div>
+</div>
