--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,24 @@
 .search_container {
 	margin: 50px 0;
 }
+
+ul.search_filters {
+	list-style-type: none;
+	li {
+		display: inline-block;
+		width: 30%;
+	}
+}
+
+.center {
+	text-align: center;
+}
+
+input[type="radio"] {
+	display: none;
+}
+
+span.badge {
+	font-size: 24px;
+	line-height: 28px;
+}
