--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,9 @@
 <div class="navbar">
   <div class="navbar-inner">
-    <%= link_to 'LibraryCat', root_url, class: 'brand' %>
+    <%= link_to root_url, class: 'brand' do %>
+        LibraryCat
+        <%= image_tag 'cat.png', class: 'logo' %>
+    <% end %>
     <ul class="nav">
       <li><%= link_to 'Home', root_url %></li>
       <li><%= link_to 'Books', books_url %></li>
