Changed title to copyright year

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -57,7 +57,7 @@
         <%= copy.place %> <%= copy.publisher %>
       </p>
       <p>
-        <b>Year:</b>
+        <b>Copyright Year:</b>
         <%= copy.year %>
       </p>
       <p>
