--- a/app/views/copies/_form.html.erb
+++ b/app/views/copies/_form.html.erb
@@ -19,7 +19,7 @@
           <div class="input-prepend input-append">
             <span class="add-on">$</span>
             <%= f.text_field attr, class: 'span2' %>
-            <span class="add-on">.00</span>
+            <!-- <span class="add-on">.00</span> -->
           </div>
         <% else %>
           <%= f.text_field attr %>
