Allow admin to edit tags

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,6 @@
 @import "jquery.ui.autocomplete";
 @import "books";
 @import "pages";
+@import "layouts/header";
+@import "layouts/footer";
+@import "dataTables/jquery.dataTables.bootstrap";
