--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,6 @@
 <footer>
-  <hr>
   <p>
-    <span class="pull-left">
-      <%= DateTime.now().strftime('%Y') %> &copy;
-    </span>
-    <span class="pull-right">
-      Built by <%= link_to 'Liz Sarb', 'http://lizsarb.com', target: '_blank' %> | <%= link_to 'LaunchPad Lab', 'http://launchpadlab.com', target: '_blank' %>
-    </span>
+    <span class="copyright"><%= DateTime.now().strftime('%Y') %> &copy;</span>
+     Built by <%= link_to 'Liz Sarb', 'http://lizsarb.com', target: '_blank' %> | <%= link_to 'LaunchPad Lab', 'http://launchpadlab.com', target: '_blank' %>
   </p>
 </footer>
