--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,21 @@
 <div class="navbar">
-  <div class="navbar-inner">
-    <%= link_to root_url, class: 'brand' do %>
-        LibraryCat
-        <%= image_tag 'cat.png', class: 'logo' %>
-    <% end %>
-    <ul class="nav">
-      <li><%= link_to 'Home', root_url %></li>
-      <li><%= link_to 'Books', books_url %></li>
-      <li><%= link_to 'New Book', new_book_url %></li>
-      <li><%= link_to 'New Copy', new_copy_url %></li>
-    </ul>
+    <div class="navbar-inner">
+      <div class="container">
+        <div class="row">
+          <div class="span3">
+            <%= link_to root_url, class: 'logo' do %>
+              <%= image_tag 'logo.png' %>
+            <% end %>
+          </div>
+          <div class="offset3 span5">
+            <ul class="nav">
+              <li><%= link_to 'Home', root_url %></li>
+              <li><%= link_to 'Books', books_url %></li>
+              <li><%= link_to 'New Book', new_book_url %></li>
+              <li><%= link_to 'Tags', tags_url %></li>
+            </ul>
+          </div>
+        </div>
+    </div>
   </div>
 </div>
