--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,14 @@
   <title><%= @title || "LibraryCat | Let's find books!" %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <!-- <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'> -->
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container">
-    <%= render 'layouts/header' %>
+  <%= render 'layouts/header' %>
+  <div class="content container">
     <%= yield %>
-    <%= render 'layouts/footer' %>
   </div>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
