--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="span12">
-    <h2>What are you looking for? Enter the words you want to use to search.</h2>
+    <h2>Enter the words you want to use to search.</h2>
     <p>(If you want to see a list of all books, leave this part blank. Then, choose a search option and click Search.)</p>
     <div class="search_container">
       <%= form_tag(search_path, class: 'form-search') do %>
         <%= text_area_tag :query, nil, class: "input-medium search-query span12", rows: '3' %>
-        <h2>How do you want to find it? Choose one of these options.</h2>
+        <h2>Choose one of these options.</h2>
         <ul class="search_filters">
         <% [:title, :author].each do |attr| %>
           <li>
