--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -3,23 +3,26 @@
 <p><%= link_to 'New Tag', new_tag_path %></p>
 
 <table class="table table-striped">
-  <tr>
-    <th>Name</th>
-    <th>Type</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @tags.each do |tag| %>
-  <tr>
-    <td><%= tag.name %></td>
-    <td><%= tag.tag_type.capitalize %></td>
-    <td><%= link_to 'Show', tag_path(tag) %></td>
-    <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
-    <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Type</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+  <% @tags.each do |tag| %>
+    <tr>
+      <td><%= tag.name %></td>
+      <td><%= tag.tag_type.capitalize %></td>
+      <td><%= link_to 'Show', tag_path(tag) %></td>
+      <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
+      <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+  <% end %>
+  </tbody>
 </table>
 
 <script>
