--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,8 +7,8 @@
               <%= image_tag 'logo.png' %>
             <% end %>
           </div>
-          <div class="offset3 span5">
-            <ul class="nav">
+          <div class="offset3 span6">
+            <ul class="nav pull-right">
               <li><%= link_to 'Home', root_url %></li>
               <li><%= link_to 'Books', books_url %></li>
               <li><%= link_to 'New Book', new_book_url %></li>
