--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -42,7 +42,8 @@
   </div>
   <div class="control-group">
     <div class="controls">
-      <%= f.submit %>
+      <%= f.submit nil, class: 'btn btn-success' %>
+      <%= link_to 'Cancel', :back, class: 'btn btn-warning' %>
     </div>
   </div>
 <% end %>
