--- a/app/views/copies/_form.html.erb
+++ b/app/views/copies/_form.html.erb
@@ -53,7 +53,8 @@
   </div>
   <div class="control-group">
     <div class="controls">
-      <%= f.submit nil, class: 'btn' %>
+      <%= f.submit nil, class: 'btn btn-success' %>
+      <%= link_to 'Cancel', :back, class: 'btn btn-warning' %>
     </div>
   </div>
 <% end %>
