Added search by subject or category

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 <body>
   <%= render 'layouts/header' %>
   <div class="content container">
+    <%= render 'layouts/messages' %>
     <%= yield %>
   </div>
   <%= render 'layouts/footer' %>
