--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,7 @@
     <p id="notice"><%= notice %></p>
 
     <h2 class="book_title"><%= @book.title %></h2>
-    
+
     <p>
       <b>Subtitle:</b>
       <%= @book.subtitle %>
@@ -45,10 +45,14 @@
       <b>Copies in this Library:</b>
       <%= @book.copies.length %>
     </p>
-		<p><%= link_to 'Edit this book', edit_book_path(@book) %></p>
+    <% if user_signed_in? %>
+		  <p><%= link_to 'Edit this book', edit_book_path(@book) %></p>
+    <% end %>
     <hr>
     <h3>Copies</h3>
-		<p><%= link_to 'Add a new copy', new_book_copy_path(@book) %></p><br/>
+    <% if user_signed_in? %>
+		  <p><%= link_to 'Add a new copy', new_book_copy_path(@book) %></p><br/>
+    <% end %>
     <% @book.copies.each do |copy| %>
       <p>
         <b>Title:</b>
@@ -74,9 +78,11 @@
         <b>Price:</b>
         <%= number_to_currency(copy.price) %>
       </p>
-      <p><%= link_to 'Edit', edit_copy_path(copy) %> |
-      <%= link_to 'Delete', copy_path(copy), method: :delete, confirm: 'Are you sure you want to remove this copy?' %></p>
-      <br/>
+      <% if user_signed_in? %>
+        <p><%= link_to 'Edit', edit_copy_path(copy) %> |
+        <%= link_to 'Delete', copy_path(copy), method: :delete, confirm: 'Are you sure you want to remove this copy?' %></p>
+        <br/>
+      <% end %>
     <% end %>
   </div>
   <div class="span4">
