--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,9 @@
             <ul class="nav pull-right">
               <li><%= link_to 'Home', root_url %></li>
               <li><%= link_to 'Books', books_url %></li>
-              <li><%= link_to 'New Book', new_book_url %></li>
+              <% if user_signed_in? %>
+                <li><%= link_to 'New Book', new_book_url %></li>
+              <% end %>
               <li><%= link_to 'Tags', tags_url %></li>
             </ul>
           </div>
