--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -27,13 +27,22 @@
     <td><%= book.series %></td>
     <td><%= book.book_type %></td>
     <td><%= print_list(book.subjects) %></td>
-    <td><%= link_to 'Show', book %></td>
-    <td><%= link_to 'Edit', edit_book_path(book) %></td>
-    <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'View', book %></td>
+    <td>
+      <% if user_signed_in? %>
+        <%= link_to 'Edit', edit_book_path(book) %>
+      <% end %>
+    </td>
+    <td>
+      <% if user_signed_in? %>
+        <%= link_to 'Delete', book, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
+    </td>
   </tr>
 <% end %>
 </table>
 
-
-<%= link_to 'Edit', edit_tag_path(@tag) %> |
-<%= link_to 'Back', tags_path %>
+<% if user_signed_in? %>
+  <%= link_to 'Edit', edit_tag_path(@tag) %> |
+  <%= link_to 'Back', tags_path %>
+<% end %>
