--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,8 @@
               <li><%= link_to 'Home', root_url %></li>
               <li><%= link_to 'Books', books_url %></li>
               <li><%= link_to 'New Book', new_book_url %></li>
-              <li><%= link_to 'Tags', tags_url %></li>
+              <li><%= link_to 'Subjects', tags_url(type: 'subject') %></li>
+              <li><%= link_to 'Categories', tags_url(type: 'category') %></li>
             </ul>
           </div>
         </div>
