--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,9 @@
 <div class="navbar">
     <div class="navbar-inner">
       <div class="container">
+        <% if user_signed_in? %>
+          <p class="text-right"><%= current_user.email %> | <%= link_to 'Logout',  destroy_user_session_path, method: :delete %></p>
+        <% end %>
         <div class="row">
           <div class="span3">
             <%= link_to root_url, class: 'logo' do %>
