Allow a user to click to a book starting with a certain letter

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -47,3 +47,10 @@ select[multiple="multiple"] {
   height: 30px;
   width: 460px;
 }
+
+.letter-menu {
+  li {
+    display: inline-block;
+    padding: 0 10px;
+  }
+}
