--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,3 +6,11 @@
 @import "layouts/footer";
 @import "dataTables/jquery.dataTables.bootstrap";
 @import "chosen";
+
+@media print {
+  .navbar { display: none; }
+  .content.container { margin: auto; }
+  .table-striped th:nth-last-child(-n+3), .table-striped td:nth-last-child(-n+3) {
+    display: none;
+  }
+}
