--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <link rel="apple-touch-startup-image" href="<%= asset_path("home-icon.png") %>">
   <link rel="apple-touch-icon" href="<%= asset_path("home-icon.png") %>">
   <meta name="apple-mobile-web-app-title" content="LibraryCat">
+  <link rel="icon" href="<%= asset_path("favicon.png") %>" />
   <!-- <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'> -->
   <%= csrf_meta_tags %>
 </head>
