--- a/app/assets/stylesheets/layouts/header.scss
+++ b/app/assets/stylesheets/layouts/header.scss
@@ -14,7 +14,7 @@ div.navbar {
     }
   }
   .navbar-inner {
-    background-color:rgb(191,236,234);
+    background-color: #c7eafb;
     background-image:none;
     border-radius:0px;
   }
