--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,9 +1,9 @@
 .book_title {
-	border-bottom: 1px solid rgb(0, 179, 171);
+	border-bottom: 1px solid #00aeef;
 }
 
 .call_number {
-	background: rgb(0, 179, 171);
+	background: #00aeef;
 	padding: 20px;
 	width: 200px;
 	font-size: 16px;
