--- a/app/assets/stylesheets/layouts/header.scss
+++ b/app/assets/stylesheets/layouts/header.scss
@@ -5,12 +5,14 @@ div.navbar {
   a.brand {
     color: black;
   }
-  .nav li {
-    border-right: 1px solid black;
-    margin-top:10px;
-    a {
-      color: black;
-      font-size: 16px;
+  .nav {
+    margin-top: 25px;
+    li {
+      margin-top:10px;
+      a {
+        color: black;
+        font-size: 16px;
+      }
     }
   }
   .navbar-inner {
