--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,7 @@
             <%= link_to root_url, class: 'logo' do %>
               <%= image_tag 'logo.png' %>
             <% end %>
+            <%= image_tag 'logo.png', class: 'print-logo' %>
           </div>
           <div class="offset3 span6">
             <ul class="nav pull-right">
