Comment out pagination

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 </ul>
 
-<p><%= paginate @books %></p>
+<p><%# paginate @books %></p>
 
 <table class="table table-striped">
   <tr>
@@ -48,7 +48,7 @@
 <% end %>
 </table>
 
-<p><%= paginate @books %></p>
+<p><%# paginate @books %></p>
 
 <br />
 <% if user_signed_in? %>
